Fixing spacing between all divs

--- a/src/components/Dialogue.css
+++ b/src/components/Dialogue.css
@@ -1,7 +1,7 @@
 .dialogueContainer {
     display: flex;
     flex-direction: row;
-
+    width: 100%;
 }
 
 .textBox p {
